2000-05-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleFocusIn):
	fixed focus getting lost when transients are opened
	(HandleLeaveNotify):
	(HandleEnterNotify):
	tried to write a workaround for "focus lost when root window is entered"

2000-05-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/module_interface.h:
	* fvwm/module_interface.c (ExecuteCommandQueue):
	* fvwm/events.c (My_XNextEvent):
	workaround for event delay problem

	* fvwm/stack.c:
	stack ring fix, final version

	* fvwm/menus.c (menuShortcuts):
	fixed meta-up/down and ctrl-up/down menu key shortcuts

2000-05-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/stack.c:
	experimental 'fix' for stack ring problem.

2000-05-14  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm2.1 (Style): removed a wrong sentence stated that Style
	commands based on name override those based on class and resource.
	* NEWS: s/GroUp/GrowUp/; increased to 2.3.18
	* ChangeLog: some clean up in number of entries

2000-05-13  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Module.h:
	added some missing prototypes

	* libs/defaults.h:
	* fvwm/fvwm.c (InitVariables):
	* fvwm/screen.h (ScreenInfo):
	* fvwm/move_resize.h (stick_function):
	* fvwm/fvwm2.1:
	* fvwm/move_resize.c (SetMoveSmoothness):
	(moveLoop):
	* fvwm/functions.h:
	* fvwm/functions.c (func_config):
	removed MoveSmoothness command

	* fvwm/move_resize.c (InteractiveMove):
	(moveLoop):
	fixed opaque icon moving

	* fvwm/add_window.c (destroy_icon_font):
	(destroy_window_font):
	does not destroy the default font anymore
	destroy old font even if no new font was specified
	core dump fixes

	* fvwm/style.c (ProcessNewStyle):
	minor bugfix

2000-05-12  Hippo

	* fvwm/builtins.c
	* fvwm/events.c
	* fvwm/fvwm2.1
	* fvwm/module_interface.c
	* fvwm/module_interface.h
	* fvwm/move_resize.c
	* libs/Module.c
	  Added queueing system for module commands.
	  Speeded up module command processing.
	  New convenience functions SendUnlockNotification() &