@@ -1,3 +1,7 @@
+2000-05-17  Hippo
+
+	* fvwm/events.c (My_XNextEvent): fixed X events getting lost & tuned up
+
 2000-05-16  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/events.c (HandleFocusIn):
